--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=localhost; database=bookglobe; user id=sa; password=MyComplexPassword!234;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
